--- a/tests/OpenTK.Tests.Generators/OpenTK.Tests.Generators.fsproj
+++ b/tests/OpenTK.Tests.Generators/OpenTK.Tests.Generators.fsproj
@@ -8,10 +8,11 @@
     <OutputType>Library</OutputType>
     <RootNamespace>OpenTK.Tests.Generators</RootNamespace>
     <AssemblyName>OpenTK.Tests.Generators</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
