--- a/src/OpenTK/OpenTK.csproj
+++ b/src/OpenTK/OpenTK.csproj
@@ -10,14 +10,14 @@
     <DocumentationFile>bin\Debug\netstandard2.0\OpenTK.xml</DocumentationFile>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>7.1</LangVersion>
-    <DefineConstants>TRACE;DEBUG;NETSTANDARD2_0;SDL2</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NETSTANDARD2_0;SDL2;WIN32;CARBON;X11</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <OutputPath>bin\Release</OutputPath>
     <DocumentationFile>bin\Release\netstandard2.0\OpenTK.xml</DocumentationFile>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>7.1</LangVersion>
-    <DefineConstants>TRACE;NETSTANDARD2_0;SDL2</DefineConstants>
+    <DefineConstants>TRACE;NETSTANDARD2_0;SDL2;WIN32;CARBON;X11</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
 	<Compile Remove="Platform\Android\**" />
