--- a/src/OpenTK/OpenTK.csproj
+++ b/src/OpenTK/OpenTK.csproj
@@ -11,6 +11,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>7.1</LangVersion>
     <DefineConstants>TRACE;DEBUG;NETSTANDARD2_0;SDL2;WIN32;CARBON;X11</DefineConstants>
+    <NoWarn>1701;1702;1705;3021</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <OutputPath>bin\Release</OutputPath>
@@ -27,4 +28,7 @@
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+      <Exec Command="$(OutputPath)..\..\..\..\Generator.Rewrite\bin\Release\Rewrite.exe --assembly $(OutputPath)OpenTK.dll --signing-key ..\..\OpenTK.snk&quot; /" />
+    </Target>
 </Project>
