--- a/src/OpenTK/OpenTK.csproj.paket.template
+++ b/src/OpenTK/OpenTK.csproj.paket.template
@@ -1,5 +1,5 @@
 type project
-id OpenTK
+id Unofficial.OpenTK
 owners
     opentk thefiddler
 authors
@@ -21,8 +21,6 @@ summary
 description
     The Open Toolkit is set of fast, low-level C# bindings for OpenGL, OpenGL ES and OpenAL. It runs on all major platforms and powers hundreds of apps, games and scientific research.
     OpenTK provides several utility libraries, including a math/linear algebra package, a windowing system, and input handling.
-files
-    OpenTK.dll.config => content/
 include-pdbs true
 excludeddependencies
     StyleCop.Analyzers
