--- a/src/OpenTK/OpenTK.csproj
+++ b/src/OpenTK/OpenTK.csproj
@@ -10,7 +10,7 @@
     <DocumentationFile>bin\Debug\netstandard2.0\OpenTK.xml</DocumentationFile>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>7.1</LangVersion>
-    <DefineConstants>TRACE;DEBUG;NETSTANDARD2_0;SDL2;WIN32;CARBON;X11</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NETSTANDARD2_0;SDL2;WIN32;CARBON;X11;OPENGL</DefineConstants>
     <NoWarn>1701;1702;1705;3021;1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -18,7 +18,7 @@
     <DocumentationFile>bin\Release\netstandard2.0\OpenTK.xml</DocumentationFile>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>7.1</LangVersion>
-    <DefineConstants>TRACE;NETSTANDARD2_0;SDL2;WIN32;CARBON;X11</DefineConstants>
+    <DefineConstants>TRACE;NETSTANDARD2_0;SDL2;WIN32;CARBON;X11;OPENGL</DefineConstants>
     <NoWarn>1701;1702;1705;3021;1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
