--- a/src/OpenTK/OpenTK.csproj
+++ b/src/OpenTK/OpenTK.csproj
@@ -22,9 +22,9 @@
     <NoWarn>1701;1702;1705;3021;1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-	<Compile Remove="Platform\Android\**" />
-	<Compile Remove="Platform\iPhoneOS\**" />
-	<Compile Remove="Graphics\ES31\**" />
+    <Compile Remove="Platform\Android\**" />
+    <Compile Remove="Platform\iPhoneOS\**" />
+    <Compile Remove="Graphics\ES31\**" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
@@ -32,4 +32,5 @@
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="&quot;$(OutputPath)..\..\..\..\Generator.Rewrite\bin\Release\Rewrite.exe&quot; --assembly &quot;$(OutputPath)OpenTK.dll&quot; --signing-key &quot;$(OutputPath)..\..\..\..\..\OpenTK.snk&quot;" />
   </Target>
+  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
